2021-02-17  Timm Bäder  <tbaeder@redhat.com>

	* elfstrmerge.c (main): Move newsecndx function to...
	(newsecndx): ...top-level static function adding shdrstrndx,
	shdrnum and fname as arguments.

2021-02-25  Frank Ch. Eigler <fche@redhat.com>

	* run-debuginfod-find.sh: Add bad webapi artifacttype test.

2021-02-17  Frank Ch. Eigler <fche@redhat.com>

	* run-debuginfod-find.sh: Tweak wait_ready() to also print -vvv log of
	appropriate debuginfod if metric timeout occurs.  Focus grooming
	test carefully at a more deterministic metric.

2021-02-12  Mark Wielaard  <mark@klomp.org>

	* run-readelf-types.sh: Add CU start to type offset reference.

2021-02-07  Alexander Miller  <alex.miller@gmx.de>

	* Makefile.am (TESTS_ENVIRONMENT): Quote variables.
	(valgrind_cmd): Unquote variable.

2021-02-08  Érico Nogueira  <ericonr@disroot.org>

	* run-debuginfod-find.sh: Check for cpio availability.

2021-02-04  Frank Ch. Eigler <fche@redhat.com>

	* run-debuginfod-find.sh: Smoke test --fdcache-mintmp option handling.

2021-01-31  Sergei Trofimovich  <slyfox@gentoo.org>

	* Makefile.am (TESTS_ENVIRONMENT): export CC variable
	to tests for use instead of 'gcc'.
	* run-disasm-x86-64.sh: use ${CC} instead of 'gcc'.
	* run-disasm-x86.sh: Likewise.
	* run-strip-g.sh: Likewise.
	* run-strip-nothing.sh: Likewise.
	* run-test-includes.sh: Likewise.

2021-01-06  Timm Bäder  <tbaeder@redhat.com>

	* zstrptr.c (main): Lift print_strings function up to ...
	(print_strings): ... here. New file scope function taking
	Elf_Scn*, Elf* and ndx as arguments.

2020-12-20  Dmitry V. Levin  <ldv@altlinux.org>

	* .gitignore: New file.

2020-12-12  Mark Wielaard  <mark@klomp.org>

	* testfile-retain.o.bz2: New test file.
	* run-retain.sh: New test.
	* Makefile.am (TESTS): Add run-retain.sh.
	(EXTRA_DIST): Add run-retain.sh and testfile-retain.o.bz2

2020-12-16  Dmitry V. Levin  <ldv@altlinux.org>

	* dwflmodtest.c (N_): Remove.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>
