@@ -1,5 +1,11 @@
 2021-02-17  Timm Bäder  <tbaeder@redhat.com>
 
+	* elfstrmerge.c (main): Move new_data_buf function to...
+	(new_data_buf): ...top-level static function adding fname,
+	ndx, shdrstrnd and shdrnum as arguments.
+
+2021-02-17  Timm Bäder  <tbaeder@redhat.com>
+
 	* elfstrmerge.c (main): Move newsecndx function to...
 	(newsecndx): ...top-level static function adding shdrstrndx,
 	shdrnum and fname as arguments.
